fix(backend): [KAN-36] resolve 4 security (hardcoded password) and 19 reliability issues